css: fixed launcher button z-index

--- a/web/css/src/tabs.less
+++ b/web/css/src/tabs.less
@@ -76,6 +76,11 @@ li.tab-handle.panel-handle {
   background-color: @upcom-light-grey;
   padding: 4px 4px 4px 4px;
   border-radius: 0;
+  z-index: 1;
+}
+
+.nav-tabs>.tab-control>a>span {
+  z-index: -1;
 }
 
 .nav-tabs>.tab-handle.panel-handle>a {
